server/check_output.txt
    Checking remote-party-finder v0.1.0 (E:\FF14\Repos\MyForks\remote-party-finder\server)
error[E0425]: cannot find function `get_stats` in module `crate::stats`
  --> src\web\background.rs:12:48
   |
12 |             let all_time = match crate::stats::get_stats(&*stats_state).await {
   |                                                ^^^^^^^^^ not found in `crate::stats`

error[E0425]: cannot find function `get_stats_seven_days` in module `crate::stats`
  --> src\web\background.rs:20:50
   |
20 |             let seven_days = match crate::stats::get_stats_seven_days(&*stats_state).await {
   |                                                  ^^^^^^^^^^^^^^^^^^^^ not found in `crate::stats`

warning: unused import: `crate::listing::PartyFinderCategory`
 --> src\template\listings.rs:3:5
  |
3 | use crate::listing::PartyFinderCategory;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::convert::Infallible`
 --> src\web\routes.rs:1:5
  |
1 | use std::convert::Infallible;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::listing_container::ListingContainer`
 --> src\web\handlers.rs:6:5
  |
6 | use crate::listing_container::ListingContainer;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `let_chains` has been stable since 1.88.0 and no longer requires an attribute to enable
 --> src\main.rs:2:12
  |
2 | #![feature(let_chains)]
  |            ^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: unused variable: `jp_servers`
   --> src\fflogs.rs:518:9
    |
518 |     let jp_servers = [
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_jp_servers`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `remote-party-finder` (bin "remote-party-finder") generated 5 warnings
error: could not compile `remote-party-finder` (bin "remote-party-finder") due to 2 previous errors; 5 warnings emitted
